Bug 459301 - Firefox / Discord use a cross-fade animation when changing browser tabs
Summary: Firefox / Discord use a cross-fade animation when changing browser tabs
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.25.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-09-17 22:45 UTC by Ridge
Modified: 2022-09-22 15:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ridge 2022-09-17 22:45:32 UTC
Quick preface; I'm not sure if this is a bug, and if it isn't I apologise. However I'm choosing to report it anyway, as it is unexpected behaviour that I'm not entirely sure if I like. The effect is nice and it works in some apps, but for web browsing it's rather in the way of things :)

SUMMARY
When changing tabs in Firefox, the transition between tabs use a cross-fade animation, like seen in other KDE apps such as Dolphin and the KDE Plasma System Settings app. Discord (Chromium) is also affected.
I was not able to observe this in other apps, even other Chromium-based apps such as Signal and Authy.

I confirmed that this is an animation controlled by Kwin/Plasma as the animation speed setting affects the fade speed.

STEPS TO REPRODUCE
1. Make sure Plasma has animation speed set to anything but instant.
2. Launch Firefox (or possibly other web-browser based apps such as Discord.)
3. Open multiple tabs if you can.
4. Switch tabs or navigate to different views within the app.

OBSERVED RESULT
Switching between tabs/application views use a cross-fading animation.

Video: https://www.youtube.com/watch?v=3_w3sXy_ewA

EXPECTED RESULT
Instant, non-animated transitions between browser tabs, like in Plasma 5.25.5 and older.

SOFTWARE/OS VERSIONS
Linux: Arch Linux, kernel 5.19 ("Linux Zen" kernel)
KDE Plasma Version: Plasma 5.25.90 
KDE Frameworks Version: 5.98
Qt Version: 5.15.6

ADDITIONAL INFORMATION
Observed on Plasma Wayland, and thus putting this in the wayland-generic component; please move it if that is wrong. I'm not sure which component specifically handles these animations.
Comment 1 Vlad Zahorodnii 2022-09-19 08:08:48 UTC
How weird, I don't think we put any code to cross-fade between tabs in FF. Can you post the output of `qdbus org.kde.KWin /KWin supportInformation`?
Comment 2 Marco Martin 2022-09-19 08:29:02 UTC
firefox must be doing asomething to trigger this effect.
we have it iirc when maximizing/unmaximizing or when the color scheme changes. some of that must me happening when switching tabs.

can you try to go in system settings -> desktop effects  and uncheck "Maximize" to see if still happen?
Comment 3 David Edmundson 2022-09-19 08:49:22 UTC
Please also include output of 

```
WAYLAND_DEBUG=1 firefox
```

and send us the snippet of changes when you switch tabs
Comment 4 Ridge 2022-09-19 18:22:31 UTC
Hi everyone, thank you for your responses. I just sat down to follow the steps you gave me, but for some unfortunate reason I cannot reproduce this issue anymore.. I'm unsure why it won't work now, I did try rebooting my machine when I experienced it, and it did persist after a reboot yesterday. After turning my PC on today it just works.

Nevertheless, I'm supplying the requested information, and I'll leave the bug status up to you in case you want to investigate this more, or just close it now.

(In reply to Marco Martin from comment #2)
> can you try to go in system settings -> desktop effects  and uncheck
> "Maximize" to see if still happen?

I tried turning it off and back on, but it works as intended now in any case.

(In reply to Vlad Zahorodnii from comment #1)
> How weird, I don't think we put any code to cross-fade between tabs in FF.
> Can you post the output of `qdbus org.kde.KWin /KWin supportInformation`?

Uploaded it here for you:
https://invent.kde.org/-/snippets/2352

(In reply to David Edmundson from comment #3)
> send us the snippet of changes when you switch tabs

I tried generating some info from changing one tab to another using CTRL+TAB, hopefully there's not too much unnecessary info with it.
https://invent.kde.org/-/snippets/2353
Comment 5 Vlad Zahorodnii 2022-09-21 16:59:30 UTC
Just had this bug in Thunderbird's composer window a couple of minutes ago.
Comment 6 Bug Janitor Service 2022-09-22 10:37:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2988
Comment 7 Vlad Zahorodnii 2022-09-22 10:42:14 UTC
Do you have any window rules?
Comment 8 Bug Janitor Service 2022-09-22 11:32:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2989
Comment 9 Vlad Zahorodnii 2022-09-22 12:32:07 UTC
Git commit 7b3ae310e6d354b449d0bc198169912134069110 by Vlad Zahorodnii.
Committed on 22/09/2022 at 12:16.
Pushed by vladz into branch 'master'.

Emit clientMaximizedStateAboutToChange when maximized mode is actually about to change

Window rules code can call maximize(requestedMaximizeMode()), in which
case the Window will emit clientMaximizedStateAboutToChange but the
maximize mode may not actually change.

This change moves the emission of of the clientMaximizedStateAboutToChange
signal to Window::changeMaximize(). The reason for doing so is that
window rules have the final decision what the maximize mode will be.

M  +0    -2    src/window.cpp
M  +13   -9    src/x11window.cpp
M  +8    -4    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/commit/7b3ae310e6d354b449d0bc198169912134069110
Comment 10 Vlad Zahorodnii 2022-09-22 12:36:43 UTC
Git commit 82cf6f3c2d8009b65f8152d31d02b313931ad00a by Vlad Zahorodnii.
Committed on 22/09/2022 at 12:36.
Pushed by vladz into branch 'Plasma/5.26'.

Emit clientMaximizedStateAboutToChange when maximized mode is actually about to change

Window rules code can call maximize(requestedMaximizeMode()), in which
case the Window will emit clientMaximizedStateAboutToChange but the
maximize mode may not actually change.

This change moves the emission of of the clientMaximizedStateAboutToChange
signal to Window::changeMaximize(). The reason for doing so is that
window rules have the final decision what the maximize mode will be.


(cherry picked from commit 7b3ae310e6d354b449d0bc198169912134069110)

M  +0    -2    src/window.cpp
M  +13   -9    src/x11window.cpp
M  +8    -4    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/commit/82cf6f3c2d8009b65f8152d31d02b313931ad00a
Comment 11 Vlad Zahorodnii 2022-09-22 13:18:05 UTC
I believe this bug should be fixed with the patch above.
Comment 12 Ridge 2022-09-22 14:26:41 UTC
(In reply to Vlad Zahorodnii from comment #7)
> Do you have any window rules?

Yes, quite a lot, however none of them are for Firefox. Discord's window rule only changes its titlebar colour, as do many of the others.

Nice work by the way!!