Don't emit clientMaximizedStateAboutToChange when not needed

if the maximize state won't actually change, don't emit it

in the scripted effects, make sure to cancel and delete everything when
the fade is done

BUG:459301