src/window.cpp
@@ -1588,8 +1588,13 @@ void Window::maximize(MaximizeMode m)
 void Window::setMaximize(bool vertically, bool horizontally)
 {
     // changeMaximize() flips the state, so change from set->flip
-    Q_EMIT clientMaximizedStateAboutToChange(this, MaximizeMode((vertically ? MaximizeVertical : 0) | (horizontally ? MaximizeHorizontal : 0)));
+
+    const MaximizeMode requestedNewMode = MaximizeMode((vertically ? MaximizeVertical : 0) | (horizontally ? MaximizeHorizontal : 0));
     const MaximizeMode oldMode = requestedMaximizeMode();
+    if (oldMode != requestedNewMode) {
+        Q_EMIT clientMaximizedStateAboutToChange(this, requestedNewMode);
+    }
+
     changeMaximize(
         oldMode & MaximizeHorizontal ? !horizontally : horizontally,
         oldMode & MaximizeVertical ? !vertically : vertically,
